--- a/src/aTES/aTES.Identity/Views/_ViewImports.cshtml
+++ b/src/aTES/aTES.Identity/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using aTES.Identity
-@namespace aTES.Identity.Pages
+﻿@using aTES.Identity
+@using aTES.Identity.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
