--- a/src/aTES/aTES.Identity/Views/Account/Login.cshtml
+++ b/src/aTES/aTES.Identity/Views/Account/Login.cshtml
@@ -1,4 +1,8 @@
-﻿@model aTES.Identity.Models.Account.LoginViewModel
+﻿@{
+    Layout = "_LayoutNoMenu";
+}
+
+@model aTES.Identity.Models.Account.LoginViewModel
 
 <div class="login-page">
     <div class="lead">
